--- a/thought1/thought1_for_kindle.tex
+++ b/thought1/thought1_for_kindle.tex
@@ -109,9 +109,10 @@ How can we discover new truths?
 This article is about a conceptual model of truth that may help answer
 these questions. I'm personally motivated to consider these questions
 because I'd like to re-evaluate the scientific method --- the search for
-truth.
+truth (although thoughts specific to the scientific method will wait for
+another article).
 
-I'll argue that this line of pursuit aligns with an understanding of
+I'll argue that this line of thought aligns with an understanding of
 human thought itself. As a result, these questions also pertain to
 another deep interest of mine, which is writing software that we would
 recognize as a person.
@@ -119,14 +120,14 @@ recognize as a person.
 \section{A traditional view}\label{a-traditional-view}
 
 The usual view of truth is that an idea is true exactly when it
-corresponds to the actual state of the world. A concept you need to
-bundle along with any definition of truth is a concept of what kinds of
-things are candidates for truth; previous philosophers have argued that
-suitable \emph{sentences} or \emph{propositions} are good candidates for
-truth. The word \emph{suitable} here refers to the need to avoid tricky
-cases such as \emph{``This sentence is false.''} I won't dwell on the
-tricky cases because I think they are mostly a distraction from the meat
-of the issue.
+corresponds to the actual state of the world. Along with a definition of
+truth, you need to bring with it a concept of what kinds of things are
+candidates for truth; previous philosophers have argued that suitable
+\emph{sentences} or \emph{propositions} are good candidates for truth.
+The word \emph{suitable} here refers to the need to avoid tricky cases
+such as \emph{``This sentence is false.''} I won't dwell on the tricky
+cases because I think they are mostly a distraction from the meat of the
+issue.
 
 The reason I'm not a fan of this definition is that it doesn't really
 explain much. It doesn't tell us how we can verify truthiness. We're
@@ -185,23 +186,26 @@ their pricing system, and half of people were charged \$10 and the other
 half were charged \$12? These may feel like edge cases, but the point
 itself is that unclear edge cases \emph{always} exist.
 
-If you concede that human ideas are imperfect models that help us
-achieve our goals, then you can see how it's useful to speak about
-effective truths rather than to insist on an idealized version of truth
-that could only make perfect sense if it knew all the rules of physics
-to the smallest detail.
+If you agree that human ideas are imperfect models that help us achieve
+our goals, then you can see how it's useful to speak about effective
+truths rather than to insist on an idealized version of truth that could
+only make perfect sense if it knew all the rules of physics to the
+smallest detail.
 
 \subsection{Relevance and social
 truths}\label{relevance-and-social-truths}
 
-I want to briefly mention two other potential essential properties of
-truth.
+I want to mention how effective truth relates to two interesting
+properties of truth --- \emph{relevance} and \emph{social acceptance}.
+These are both interesting aspects of truth that I think make more sense
+from the viewpoint of effective truth than they do in the context of
+traditional truth.
 
-One is that the \emph{relevance} of an idea seems to be important for
-that idea to be discussed as true or false. Suppose a certain particle
-of dust in a far-off galaxy may or may not one day collide with another
-certain particle of dust. The point of this example is that no one
-cares. Neither outcome will have any bearing on any human.
+The \emph{relevance} of an idea seems to be important for that idea to
+be discussed as true or false. Suppose a certain particle of dust in a
+far-off galaxy may or may not one day collide with another certain
+particle of dust. The point of this example is that no one cares.
+Neither outcome will have any bearing on any human.
 
 The traditional model of truth applies equally well to these particles
 of dust as it does to the more pertinent question of whether or not an
@@ -212,22 +216,22 @@ things that don't matter. From a certain point of view we basically
 \emph{can't} think about completely irrelevant ideas because we simply
 don't see them.
 
-The other potential essential property I wanted to mention is
-\emph{social truth,} by which I mean the sense that some ideas are
-accepted or not based on large-scale social behaviors. For example, what
-kind of clothes are currently in fashion? While some specific people
-have more influence on this than others, this kind of truth is
-ultimately up to the actions of the many. Another example of social
-truth are questions of widely-known fictional characters such as Santa
-Claus. It's generally considered true that Santa Claus lives at the
-North Pole, although there is no such person. In cases like this, a
-story has evolved over time, perhaps influenced more strongly by some
-individuals than others, but the story takes on meaning through its
-collective acceptance as a kind of truth.
+The other property I wanted to mention is \emph{social acceptance,} by
+which I mean the sense that some ideas are accepted or not based on
+large-scale social behaviors. For example, what kind of clothes are
+currently in fashion? While some specific people have more influence on
+this than others, this kind of truth is ultimately up to the actions of
+the many. Another example of social acceptance are questions of
+widely-known fictional characters such as Santa Claus. It's generally
+considered true that Santa Claus lives at the North Pole, although there
+is no such person. In cases like this, a story has evolved over time.
+Perhaps it's been influenced more strongly by some individuals than
+others, but the story takes on meaning through its collective acceptance
+as a kind of truth.
 
 Similar to relevance, the idea of social acceptance can be viewed as
-indirectly meaningful through the lens of effective truth. For example,
-if you want to understand the advertising around, or integrate your
+gaining its value through the lens of effective truth. For example, if
+you want to understand the advertising around, or integrate your
 children into a world of a Santa Claus-celebrating society, then it's
 useful to be aware of the mythology behind Santa Claus. In general,
 social truths appear to be ideas that tend to build on top of, or
@@ -244,16 +248,16 @@ truth of an idea.
 
 One example is the idea that a trip from your apartment in Manhattan to
 Penn Station takes 20 minutes. This is a simple idea that, in practice,
-may often be true. But there are many factors that may need to be taken
-into consideration to make this idea more accurate. Traffic is worse
-during rush hour. If the subway is not running normally, you may need to
-find an alternative route. The availability of trains and cars decreases
-on weekends. If you're aware of the many moving pieces, then you're in a
-better position to get to Penn Station on time. It's not quite
-\emph{false} that you live 20 minutes away, so much as it is
-\emph{useful} to act as if that were true; and in fact even \emph{more
-useful} to keep in mind modifications that allow you to plan your trip
-more resiliantly.
+may often help you get to Penn Station at a desired moment. But there
+are many factors that, when taken into consideration, would make this
+idea more accurate. Traffic is worse during rush hour. If the subway is
+not running normally, you may need to find an alternative route. The
+availability of trains and cars decreases on weekends. If you're aware
+of the many moving pieces, then you're in a better position to get to
+Penn Station on time. It's not quite \emph{false} that you live 20
+minutes away, so much as it is \emph{useful} to act as if that were
+true; and in fact even \emph{more useful} to keep in mind modifications
+that allow you to plan your trip more resiliantly.
 
 \subsection{Truth itself as a useful
 fiction}\label{truth-itself-as-a-useful-fiction}
@@ -264,8 +268,7 @@ still need it?
 
 I suggest that, in practice, we already use effectiveness as the
 building blocks for how we decide to do what we do. Perhaps the idea of
-truth itself has come in handy as a counterpoint to the technique of
-lying.
+truth itself has come in handy as a counterpoint to lying.
 
 Imagine living in a world without communication. Then the need to
 distinguish a truth from a falsehood is far from your thoughts. You
@@ -273,12 +276,12 @@ still can learn and accomplish things by experimenting and thinking. In
 other words, you already have a model for how the world works without
 need for an explicit concept of truth.
 
-I'll give another example to illustrate the concept of a \emph{useful
-fiction}. Consider the center of gravity of an object. It is not a part
-of reality --- nor do we even pretend it's a physical object. At the
-same time, it's useful to think in terms of a center of gravity in order
-to model how things behave physically. Many useful concepts can be seen
-from this angle --- the idea of ownership, money, responsibility.
+Next I'll introduce the idea of a \emph{useful fiction} with an example.
+Consider the center of gravity of an object. It is not a part of reality
+--- nor do we even pretend it's a physical object. At the same time,
+it's useful to think in terms of a center of gravity in order to model
+how things behave physically. Many useful concepts can be seen from this
+angle --- the idea of ownership, money, responsibility.
 
 What unites these ideas is that they help us get things done without
 having an obvious physical counterpoint. We've \emph{added} a new idea
@@ -305,42 +308,39 @@ event still happened? In that setting, how is truth an internal idea?
 
 But this line of questioning is misguided. My claim is not about what is
 false or true. Rather, the argument of this article is that it's
-\emph{more useful} to model truth on effectiveness than it is to place
-our first principle on a correspondence with reality. In other words,
-I'm never disputing the truth or falsity of any particular event; I'm
-not disagreeing with the traditional concept of truth, rather I'm seeing
-it as a higher-level concept that we've invented in a world that already
-contained the precepts of thought beforehand.
+\emph{more useful} to model truth on effectiveness than on a
+correspondence with reality. In other words, I'm never disputing the
+truth or falsity of any particular event; I'm not disagreeing with the
+traditional concept of truth, rather I'm seeing it as a higher-level
+concept that we've invented in a world that already contained the
+precepts of thought beforehand.
 
 \subsection{Charles Pierce and Karl
 Popper}\label{charles-pierce-and-karl-popper}
 
 I wish I were better versed in the relevant schools of philosophy before
 writing this so I could explain exactly how this line of thought fits in
-historically. I don't think I'm an expert at the history around these
-ideas, but I will mention a small number of prior ideas and how they
-relate.
+historically. Despite my lack of historical expertise, I will at least
+mention a small number of prior ideas and how they relate.
 
-One of the most relevant set of ideas is that of \emph{pragmatism} as
-championed by Charles Pierce in the early 20th century CHECK. Pierce's
-perspective is typically summarized as saying that an idea is true
-exactly when it is \emph{useful}. I have quite deliberately gone in a
-subtly but critically important direction by replacing the word
-\emph{useful} by the word \emph{effective}, and I'll explain the
-distinction I have in mind.
+\emph{Pragmatism} is a relevant set of ideas champtioned by Charles
+Pierce. Pierce's perspective is typically summarized as saying that an
+idea is true exactly when it is \emph{useful}. I have deliberately used
+the word \emph{effective} rather than \emph{useful} for reasons I'll
+explain below, but the difference is more superficial than profound.
 
 A brief but compelling argument against the idea of truth as usefulness
 is this: It may be useful to think of my spouse as faithful, but that
 certainly doesn't make it true. I suspect Pierce himself would have
-disagreed with this in much the same way I will, though I can't be
-certain of that; so I'll present my reply as my own.
+responded to this in much the same way I will, though I can't be certain
+of that; so I'll present my reply as my own.
 
 There are two trouble spots with this argument. The first is almost a
 distraction, but is important: It's the idea that we can treat belief as
 a choice. Do I choose what I think is true? I don't think so at all. We
 can choose to act \emph{as if} one or the other thing is true, but even
 in acting so, we don't really change our mind unless we receive more
-evidence one way or the other (which evidence, admittedly, may be based
+evidence one way or the other (this evidence, admittedly, may be based
 on an internal revelation).
 
 The second --- and I think more important --- reply is to keep in mind
@@ -352,7 +352,9 @@ hand, if pretending your spouse is faithful is useful for ensuring that
 the only children either of you parent is between the two of you, then
 clearly it's \emph{not} useful to simply ``think of'' your spouse as
 faithful. Your action of thinking this has essentially no influence over
-the child-centered outcome you want to achieve.
+the child-centered outcome you want to achieve. Your thinking action
+fails to ensure your spouse's fidelity in either the traditional or
+effective perspectives on truth.
 
 Whatever the case, you need to look at the goals in order to evaluate
 the effectiveness of the decisions made to reach those goals. The
@@ -388,37 +390,49 @@ more interesting in the framework of a model for how humans think. This
 is probably a line of thought worthy of its own article, but I wanted to
 include an overview here to add some fun context.
 
-The framework is this: Humans have goals, and mental building blocks of
-actions they can take to help achieve those goals. Effective truths are
-these building blocks, and the way we put them together is like an
-algorithm built from subroutines. Put another way, if we're thinking
-about a plan of action, then we can see effective truths as if-then
-clauses, and a chain of them as a kind of logical argument (albeit
-non-boolean since we have shades of truth) which begins with the state
-of the world as it is now, and ends with the state of the world as we'd
-like it to be.
+The framework is this: Humans have both goals and mental building blocks
+of actions. A sequence of these building block actions can help achieve
+those goals. Effective truths are these building blocks. We put them
+together the way an algorithm built is from subroutines. Put another
+way, if we're thinking about a plan of action, then we can see effective
+truths as if-then clauses, and a chain of them as a kind of logical
+argument (albeit non-boolean since we have shades of truth) which begins
+with the state of the world as it is now, and ends with the state of the
+world as we'd like it to be.
 
-Communication is such a critical aspect of thought and action today that
-it deserves special attention. When we express an idea to another
+\emph{Communication} deserves special attention as a particular kind of
+building block action. When we communicate or express an idea to another
 person, we're trying to do something useful for both of us by working
 within a framework where we each have goals. \emph{Statements} are
 meaningful in that they are effective by distinguishing among multiple
 possible states of the world. In other words, they answer a question,
-and their meaning only truly makes sense in the context of both the goal
-and the question they imply.
+and their meaning only truly makes sense in the context of both the
+\emph{goal} and the \emph{question} they imply.
 
 Although I've been very brief in this section, you can begin to see how
-these ideas might become part of a model for machine intelligence.
+these ideas might become part of a model for both humand and machine
+intelligence.
 
 \section{A bigger picture}\label{a-bigger-picture}
 
-Descarte, arguing from first principles, suggested that
+Descarte, arguing from first principles, suggested that we can be
+certain of nothing beyond our thoughts and our existence. In light of
+the non-boolean nature of effective truth, we can see his ideas as
+presaging an acceptance of the things we casually consider to be true
+as, upon closer examination, mere conveniences we build atop the
+unreliable perceptions that we agree to pretend are reality.
 
-(philosophy as humanity's relationship with the world, not about the
-world itself)
+Perhaps rebuilding on these ashes left by Descartes, David Hume argued
+that philosophy itself is inextricably tied to human nature. Many
+philosophical arguments act as if they are fundamentally about the
+universe, and that humanity is incidental to them. But, as Hume pointed
+out, all of our philosophy exists in human minds, is seen by human eyes,
+and is spoken in human terms. It does not exist without us, and the more
+we open our eyes to our role, the more we can be honest about how much
+we've invented where we'd hoped was discovery.
 
-(David Hume, Descartes)
-
-(aim to close with the big picture idea and some argument as to why)
+This link between humanity and philosophy isn't about humans being
+special within the world. Rather, we're so ordinary that we must
+relinquish hope that our thoughts might live without us.
 
 \end{document}
