thought1: more edits

--- a/thought1/thought1.tex
+++ b/thought1/thought1.tex
@@ -433,6 +433,6 @@ we've invented where we'd hoped was discovery.
 
 This link between humanity and philosophy isn't about humans being
 special within the world. Rather, we're so ordinary that we must
-relinquish hope that our thoughts might live without us.
+relinquish hope that our thoughts might have life without us.
 
 \end{document}
