--- a/lsh_post1/lsh_post1.tex
+++ b/lsh_post1/lsh_post1.tex
@@ -501,7 +501,11 @@ Here's a summary of some random sampling I did in order to explore the
 relationship between various values of \(j\) for \(d=100\) dimensional
 data using \(k=10\) different random hashes: CHECK
 
-IMAGE 9
+\begin{figure}
+\centering
+\includegraphics{images/image9@2x.png}
+\caption{CHECK description here}\label{fig:fig9}
+\end{figure}
 
 CHECK the whole next paragraph What's interesting here is that we get a
 relatively tight box plot for \(j\) values around CHECK. This means that
